--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                         />
                     </button>
                     <!-- Replace the '#' with your discord server's invite-->
-                    <a class="nav__icon" href="#">
+                    <a class="nav__icon" href="https://discord.gg/DBQjZUmQxM">
                         <img src="/assets/discord.svg" alt="Discord Logo" />
                     </a>
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="#"
+                        href="https://docs.google.com/forms/u/0/create?usp=forms_home&ths=true"
                         target="_blank"
                         >Submit Form</a
                     >
